# kloeden

./: .gitignore  HANDOFF.md  README.md
cpp/: CMakeLists.txt
cpp/bench/: CMakeLists.txt  bench_gbm_digital_kernels.cpp  bench_gbm_euler_scalar.cpp  bench_gbm_milstein_scalar.cpp  bench_gbm_taylor15_scalar.cpp
cpp/include/kloeden/: buffer.hpp  digital.hpp  processes.hpp  schemes.hpp
cpp/src/: buffer.cpp  gbm_digital_bel_lr.cpp  gbm_digital_naive_pathwise.cpp  gbm_euler_scalar.cpp  gbm_milstein_scalar.cpp  gbm_taylor15_scalar.cpp  placeholder.cpp
cpp/tests/: CMakeLists.txt  test_gbm_digital_kernels.cpp  test_gbm_euler_scalar.cpp  test_gbm_milstein_scalar.cpp  test_gbm_taylor15_scalar.cpp
docs/: methodology.md  results.md
results/: README.md
rust/: Cargo.toml
rust/kloeden-bench/: Cargo.toml
rust/kloeden-bench/benches/: gbm_digital_kernels.rs  gbm_euler.rs  gbm_euler_elworthy.rs  gbm_milstein.rs  gbm_milstein_elworthy.rs  gbm_taylor15.rs
rust/kloeden-bench/src/: lib.rs
rust/kloeden-bench/tests/: elworthy_smoke.rs
rust/kloeden-buffer-gen/: Cargo.toml
rust/kloeden-buffer-gen/src/: main.rs
scripts/: collate.py  gen-fixtures.sh  run-bench.sh  verify.py
