[package]
name = "kloeden-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
sha2 = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
memmap2 = "0.9"

[dev-dependencies]
criterion = { workspace = true }
