[package]
name = "kloeden-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
sha2 = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
memmap2 = "0.9"
pathwise-core = "0.2"
elworthy-rt = "0.1"
elworthy-expr = "0.1"
elworthy-codegen = "0.1"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "gbm_euler"
harness = false

[[bench]]
name = "gbm_milstein"
harness = false

[[bench]]
name = "gbm_taylor15"
harness = false

[[bench]]
name = "gbm_euler_elworthy"
harness = false

[[bench]]
name = "gbm_milstein_elworthy"
harness = false

[[bench]]
name = "gbm_digital_kernels"
harness = false
