[package]
name = "kloeden-buffer-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rand = { workspace = true }
rand_distr = { workspace = true }
rand_chacha = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
